minor changes to appearance of stars and added ReviewDetails module

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </section>
             <section class="menuSection">
                 <h2>Menu</h2>
-                <article class="review_form"></article>
+                <article class="review__form"></article>
                 <article class="filter__category"></article>
                 <article class="menu__items"></article>
             </section>
