--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                 <article class="userOrders"></article>
             </section>
             <section class="menuSection">
-                <h2>Menu</h2>
                 <article class="review__form"></article>
+                <article class="review__details"></article>
+                <h2>Menu</h2>
                 <article class="filter__category"></article>
                 <article class="menu__items"></article>
             </section>
